# proglang-notes

./: .editorconfig  .gitignore  .latexmkrc  Makefile  Pipfile  README.md  docker-compose.yml  font.map  main.tex  pyproject.toml  texmf.cnf  tlmgr_requirement.bash
.github/workflows/: make.yml
article/: 1mlex-module-system.tex  bidirectional-type-checking-for-system-f.tex  bidirectional-type-checking.tex  bitmap-freelist-memory-allocator.tex  call-by-push-value.tex  concurrent-gc-for-functional-programs.tex  fing-modules-lightweight.tex  fing-modules.tex  full1ml-module-system.tex  haskell-parsing-grammar-with-peg.tex  hm-type-system.tex  hmx-type-system.tex  implementation-note-of-peg-parser.tex  lambda-bar-mu-mu-tilde.tex  lambda-mu-calculus.tex  martelli-montanari-fo-unification.tex  ml-type-inference-by-hmx.tex  on-the-fly-gc-tri-color-cms.tex  outside-in-type-inference.tex  pcf.tex  peg-cut-operation-optimization.tex  pi-calculus.tex  practical-type-inference-for-rankn-types.tex  preliminaries.tex  quell-module.tex  quell-syntax.tex  reference.bib  reference.tex  semantics-of-lr1.tex  semantics-of-peg.tex  simply-typed-lambda.tex  srb-an-abstract-machine-of-peg.tex  strik-module.tex  strik-syntax.tex  strik-type-system.tex  system-f.tex  system-fc-with-explicit-kind-equality.tex  system-fomega.tex  system-t.tex  title.tex  (+2 more)
asset/implementation-note-of-peg-parser/: sample-grammar-optimized.dot  sample-grammar.dot
config/: common.tex  layout.tex  macro.tex  math.tex
public/: index.html
sty/: amsalpha-nodash.bst
