[tool.poetry]
name = "read-papers-proglang"
version = "0.1.0"
description = ""
authors = ["Mizunashi Mana <mizunashi-mana@noreply.git>"]

[tool.poetry.dependencies]
python = "^3.7"
Pygments = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
