[tool.poetry]
name = "proglang-notes"
version = "0.1.0"
description = ""
authors = ["Mizunashi Mana <contact@mizunashi.work>"]

[tool.poetry.dependencies]
python = "^3.7"
Pygments = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
